@@ -1,6 +1,7 @@
 Revision history for Test-Run-CmdLine
 
     * Changed the exit status of "runprove --help" to 0.
+    * Added meta-data and other information to the Build.PL.
 
 0.0111     Mon May  4 20:37:06 IDT 2009
     * Replaced "NEXT.pm" with MRO::Compat.
